--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "ryanperera-portfolio-v2",
   "private": true,
-  "homepage": "https://ryanperera.github.io",
+  "homepage": "https://ryanperera.github.io/oldportfolio",
   "version": "0.0.0",
   "type": "module",
   "scripts": {
